project(test)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
else ()
    set(CMAKE_CXX_FLAGS "-m64 -mpopcnt -mavx2 -mlzcnt -mbmi -mbmi2")
    if (WIN32)
        #set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
    endif()
endif ()
set(CMAKE_CXX_STANDARD 17)
add_executable(posmap_test main.cpp)
